# roxy

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/skills/: README.md  code_review.md  security_review.md  test_requirements.md
crates/roxy-core/: Cargo.toml
crates/roxy-core/src/: clickhouse.rs  config.rs  lib.rs  models.rs  proxy_manager.rs  routing.rs  updater.rs
crates/roxy-core/src/services/: clickhouse.rs  downloader.rs  mod.rs  otel_collector.rs
crates/roxy-mcp/: Cargo.toml  README.md
crates/roxy-mcp/examples/: test_rum_views.rs
crates/roxy-mcp/src/: datadog.rs  lib.rs  main.rs  tools.rs
crates/roxy-proxy/: Cargo.toml  openapi.yaml  test_control_api.sh
crates/roxy-proxy/src/: auth.rs  control.rs  gateway.rs  kubectl.rs  lib.rs  main.rs  process.rs  socks.rs
crates/roxy-proxy/src/protocol/: intercept.rs  kafka.rs  mod.rs  postgres.rs
crates/roxy-proxy/src/tls/: ca.rs  cert_cache.rs  config.rs  mod.rs
crates/roxy-proxy/tests/: integration_tests.rs
crates/roxy-ui/: Cargo.toml
crates/roxy-ui/resources/: AppIcon.icns  roxy.entitlements
crates/roxy-ui/resources/info/: Info.plist
crates/roxy-ui/src/: main.rs  state.rs  theme.rs
crates/roxy-ui/src/components/: about_dialog.rs  connection_detail.rs  connection_list.rs  database_detail.rs  database_list.rs  detail_panel.rs  kubernetes_panel.rs  left_dock.rs  messaging_detail.rs  messaging_list.rs  mod.rs  node_graph.rs  request_list.rs  request_row.rs  sidebar.rs  status_bar.rs  title_bar.rs  toolbar.rs
docs/: CNAME  README.md  index.html  style.css
examples/: tls_interception.rs
examples/fullstack-k8s-dev/: .github-actions-example.yml  Cargo.toml  README.md
examples/fullstack-k8s-dev/kubernetes/: config-service.yaml  gateway.yaml  kafka.yaml  kustomization.yaml  namespace.yaml  orders-api.yaml  postgres.yaml
examples/fullstack-k8s-dev/nestjs-api/: Dockerfile  package-lock.json  package.json
examples/fullstack-k8s-dev/nestjs-api/src/: app.module.ts  global-agent.d.ts  main.ts
examples/fullstack-k8s-dev/nestjs-api/src/config/: config.module.ts  config.service.ts
examples/fullstack-k8s-dev/nestjs-api/src/database/: database-health.service.ts  database.module.ts
examples/fullstack-k8s-dev/nestjs-api/src/kafka/: kafka.module.ts  kafka.producer.ts
examples/fullstack-k8s-dev/nestjs-api/src/orders/: orders.controller.ts  orders.module.ts  orders.service.ts
examples/fullstack-k8s-dev/nestjs-api/src/orders/dto/: create-order.dto.ts  update-order.dto.ts
examples/fullstack-k8s-dev/nestjs-api/src/orders/entities/: order-item.entity.ts  order.entity.ts
examples/fullstack-k8s-dev/react-native-app/: .gitignore  App.tsx  app.json  package-lock.json  package.json  tsconfig.json
examples/fullstack-k8s-dev/react-native-app/src/api/: client.ts
examples/fullstack-k8s-dev/tests/: integration_test.rs
script/: bundle-mac  generate-icon
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
