[package]
name = "roxy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and models for Roxy network debugger"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# ClickHouse
clickhouse = { workspace = true }

# Time and IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP types
http = { workspace = true }
url = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# For downloading binaries
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures = "0.3"

# For home directory detection
dirs = "6.0"

# For async traits
async-trait = "0.1"

# Cryptography for checksums
sha2 = "0.10"

# Regex for pattern matching
regex = "1.10"

# Random number generation
rand = "0.8"

# Configuration file parsing
toml = "0.8"

# Unix process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
