[package]
name = "roxy-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

description = "Roxy proxy worker - HTTP/SOCKS proxy with OpenTelemetry instrumentation"

[lib]
name = "roxy_proxy"
path = "src/lib.rs"

[[bin]]
name = "roxy-proxy"
path = "src/main.rs"

[dependencies]
# Internal
roxy-core.workspace = true

# Async runtime
tokio.workspace = true

# HTTP/Proxy
hudsucker.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
rustls.workspace = true
rcgen.workspace = true

# SOCKS proxy
fast-socks5 = "0.9"

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
url.workspace = true
rand.workspace = true
base64.workspace = true

# macOS system proxy configuration
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { workspace = true, features = ["full", "test-util"] }
rand = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
