[package]
name = "roxy-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

description = "Roxy proxy worker - HTTP forwarding proxy with request logging"

[lib]
name = "roxy_proxy"
path = "src/lib.rs"

[[bin]]
name = "roxy-proxy"
path = "src/main.rs"

[dependencies]
# Internal
roxy-core.workspace = true
roxy-mcp = { path = "../roxy-mcp", features = ["sse"] }

# Async runtime
tokio.workspace = true

# HTTP/Proxy
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
url.workspace = true
rand.workspace = true

# Process identification (for finding which app is connecting)
libproc = "0.14"

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true
futures.workspace = true

# Regex for HTTPRoute pattern matching
regex = "1.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { workspace = true, features = ["full", "test-util"] }
rand = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

# SOCKS proxy client for integration tests
tokio-socks = "0.5"
