[package]
name = "roxy-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native network debugging interface for Roxy proxy"

[[bin]]
name = "roxy"
path = "src/main.rs"

[dependencies]
# GPUI - Zed's GPU-accelerated UI framework
gpui = "0.2.2"

# Async runtime
tokio = { workspace = true }

# Internal crates
roxy-core = { workspace = true }
roxy-proxy = { path = "../roxy-proxy" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Directories
dirs = "5.0"

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# UI utilities
smallvec = "1.13"
parking_lot = "0.12"
futures = "0.3"

# Kubernetes
kube = { version = "0.98", features = ["client", "config"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[package.metadata.bundle]
name = "Roxy"
identifier = "dev.roxy.app"
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
version = "0.1.0"
copyright = "Copyright © 2024 Roxy Contributors. All rights reserved."
category = "Developer Tool"
short_description = "Network debugging proxy with powerful routing and inspection"
long_description = """
Roxy is a native network debugging proxy that captures, inspects, and routes HTTP/HTTPS traffic.
Features include real-time request/response viewing, powerful routing rules, Kubernetes integration,
and a beautiful native macOS interface built with GPUI.
"""
osx_minimum_system_version = "12.0"
osx_url_schemes = ["roxy"]
osx_info_plist_exts = ["resources/info/*"]
