[package]
name = "fullstack-k8s-dev-test"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
harness = true

[dependencies]
roxy-core = { path = "../../crates/roxy-core" }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
